basic functionality for InputManager class
- created statemachine for each key.
- created array of KeyEntry's that have the previous and current state as well as the timestamp of the action.
- created two functions to process the two windows messages we process.
- changed the jobsystem to not use the moodycamel queue but the one i created because it's good enough.
- made program create a window to get input on.
- removed unnecessary headers in the main.cpp file
- made main.cpp use the wWinMain functions inorder for it to create a window.

--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="InputManager.cpp">
+    <ClCompile Include="InputManager\InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClInclude Include="ThreadSafeContainers\concurrentqueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="InputManager.h">
+    <ClInclude Include="InputManager\InputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
