--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -20,14 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <!--<ClCompile Include="ThreadSafeContainers\Deque.cpp" /> -->
-    <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="InputManager\InputManager.cpp" />
     <ClCompile Include="JobSystem\JobSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <!-- <ClCompile Include="ThreadSafeContainers\ThreadSafeBoundedDeque.cpp" /> -->
   </ItemGroup>
   <ItemGroup>
     <!--<ClInclude Include="Deque.h" /> -->
-    <ClInclude Include="InputManager.h" />
+    <ClInclude Include="InputManager\InputManager.h" />
     <ClInclude Include="JobSystem\JobSystem.h" />
     <ClInclude Include="ThreadSafeContainers\concurrentqueue.h" />
     <!--<ClInclude Include="ThreadSafeContainers\Queue.h" /> -->
@@ -116,7 +116,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -148,7 +148,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
