completed basic implementation of InputManager
- added support for character messages to enable non-game inputs (e.g. typing)
- added a mouse state member to store the state of the mouse
- added support for the mouse messages, except for the scrollwheel because that could easily be done later.
- refactored the InputManager functions to have same types of operations in the same place: moved state change from released -> unheld, and statechange from pressed ->held to the update_key_states function instead of awkwardly existing at start of get_input function
- added constructos to the private structures so they get initialized properly
- removed the inputmanager constructor that takes a window handle

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -29,8 +29,8 @@
     <!--<ClInclude Include="Deque.h" /> -->
     <ClInclude Include="InputManager\InputManager.h" />
     <ClInclude Include="JobSystem\JobSystem.h" />
-    <ClInclude Include="ThreadSafeContainers\concurrentqueue.h" />
-    <!--<ClInclude Include="ThreadSafeContainers\Queue.h" /> -->
+    <!-- <ClInclude Include="ThreadSafeContainers\concurrentqueue.h" /> -->
+    <ClInclude Include="ThreadSafeContainers\Queue.h" />
     <!-- <ClInclude Include="ThreadSafeContainers\ThreadSafeBoundedDeque.h" /> -->
   </ItemGroup>
   <PropertyGroup Label="Globals">
