Completed vertical slice for input manager
- created GameAction object that abstracts away the input type and value (wrapper for a tagged enum)
- changed the interface for querying the state of a gameaction to using a compile time hashed string literal so the user doenst need to manage GameAction objects
- created a map from hashed string literals to gameaction objects for fast lookup of the state from the given string hash.
- created querying function that return a boolean instead of the actual state
- added utilities header and cpp class that will include utilities that can be used by any class (e.g. fast random number generator) for now includes the string hashing macro
- added support for adding gameactions at runtime and remapping the input of gameactions at runtime

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -19,19 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <!--<ClCompile Include="ThreadSafeContainers\Deque.cpp" /> -->
     <ClCompile Include="InputManager\InputManager.cpp" />
+    <ClCompile Include="Utilities\Utilities.cpp" />
     <ClCompile Include="JobSystem\JobSystem.cpp" />
     <ClCompile Include="main.cpp" />
-    <!-- <ClCompile Include="ThreadSafeContainers\ThreadSafeBoundedDeque.cpp" /> -->
   </ItemGroup>
   <ItemGroup>
-    <!--<ClInclude Include="Deque.h" /> -->
     <ClInclude Include="InputManager\InputManager.h" />
+    <ClCompile Include="Utilities\Utilities.h" />
     <ClInclude Include="JobSystem\JobSystem.h" />
-    <!-- <ClInclude Include="ThreadSafeContainers\concurrentqueue.h" /> -->
     <ClInclude Include="ThreadSafeContainers\Queue.h" />
-    <!-- <ClInclude Include="ThreadSafeContainers\ThreadSafeBoundedDeque.h" /> -->
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
