vector math data types
- created vec2, vec3, and vec4 datatypes
- created a Math folder to hold the math data types
- cleaned up what get's included by the other managers
- changed emplace to try_emplace in add_action so we dont add two different actions with the same name.
- removed unnecessary comments from queue.h
- added a TODO to utilities.h

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -19,14 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Math\Vector.cpp" />
     <ClCompile Include="InputManager\InputManager.cpp" />
     <ClCompile Include="Utilities\Utilities.cpp" />
     <ClCompile Include="JobSystem\JobSystem.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Math\Vector.h" />
     <ClInclude Include="InputManager\InputManager.h" />
-    <ClCompile Include="Utilities\Utilities.h" />
+    <ClInclude Include="Utilities\Utilities.h" />
     <ClInclude Include="JobSystem\JobSystem.h" />
     <ClInclude Include="ThreadSafeContainers\Queue.h" />
   </ItemGroup>
