created stack allocator class
- added a single ended stack allocator (only grows upwards)
- created memory header file that contains helper functions for the allocators
- created the interface for the pool allocator
- changed name of allocator's allocate function from allocate_aligned to allocate, because we always want to allocate aligned memory
- made input manager members conform to member variable naming conventions

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="InputManager\InputManager.h" />
     <ClInclude Include="Memory\LinearAllocator.h" />
     <ClInclude Include="Memory\MemoryArena.h" />
+    <ClInclude Include="StackAllocator.h" />
     <ClInclude Include="Utilities\Utilities.h" />
     <ClInclude Include="JobSystem\JobSystem.h" />
     <ClInclude Include="ThreadSafeContainers\Queue.h" />
