--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="Memory\MemoryManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Memory\GeneralAllocator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
