implemented a threadsafe closed templated hashtable
- hashtable implements functions : insert, remove, at, contains, and set
- changed input manager to use the new hashtable
- removed causes of warning of conversion from double to float

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="Math\Quaternion.cpp" />
     <ClCompile Include="Math\Vector.cpp" />
     <ClCompile Include="InputManager\InputManager.cpp" />
+    <ClCompile Include="Memory\GeneralAllocator.cpp" />
     <ClCompile Include="Memory\MemoryManager.cpp" />
     <ClCompile Include="Utilities\Utilities.cpp" />
     <ClCompile Include="JobSystem\JobSystem.cpp" />
