--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Memory\MemoryManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Memory\GeneralAllocator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="JobSystem\JobSystem.h">
