implemented start of resource manager
- implemented reading data from zip files
- implemented reading obj files for dependencies
- still need to make sure dependencies are loaded properly and have their reference count traversed properly

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,28 @@ x64/Debug/Engine.vcxproj.FileListAbsolute.txt
 *.ipdb
 *.opendb
 Resources/CyberCity3D_Sample_OBJ.zip
+*.p7s
+packages/zlib-vc140-static-64.1.2.11/build/native/zlib-vc140-static-64.targets
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/crc32.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/deflate.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/gzguts.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/inffast.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/inffixed.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/inflate.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/inftrees.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/trees.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/zconf.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/zlib.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/include/zutil.h
+packages/zlib-vc140-static-64.1.2.11/lib/native/libs/x64/static/Debug/zlibstatic.lib
+packages/zlib-vc140-static-64.1.2.11/lib/native/libs/x64/static/Release/zlibstatic.lib
+packages/zlib-vc140-static-64.1.2.11/zlib-vc140-static-64.1.2.11.nupkg
+Resources/CyberCity3D_Sample_OBJ/CyberCity3D_Sample_OBJ.zip
+Resources/CyberCity3D_Sample_OBJ/OBJ/Miami_Sample.mtl
+Resources/CyberCity3D_Sample_OBJ_original.zip
+Resources/Miami_Sample.mtl
+Resources/Miami_Sample.zip
+Resources/OBJ.zip
+Resources/text.txt.zip
+Resources/text.txt/text.txt
+test.zip
