--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="directxtk12_desktop_2015" version="2019.12.17.1" targetFramework="native" />
+  <package id="rapidxml" version="1.13" targetFramework="native" />
 </packages>
